[gd_scene load_steps=32 format=3 uid="uid://xjks5ln0fs4p"]

[ext_resource type="Script" path="res://CharacterBody3D.gd" id="1_pwl84"]
[ext_resource type="Script" path="res://HUD.gd" id="2_csxt6"]
[ext_resource type="PackedScene" uid="uid://ebpvtlurq4fc" path="res://models/weapons/blasterI.glb" id="2_dxxtd"]
[ext_resource type="Script" path="res://Weapons_manager.gd" id="2_fssy8"]
[ext_resource type="PackedScene" uid="uid://bn2ph6o088eqi" path="res://models/weapons/blasterN.glb" id="3_5ytwo"]
[ext_resource type="Resource" uid="uid://tnh0kdgebdw6" path="res://weapon resources/blasterE.tres" id="3_cimga"]
[ext_resource type="Texture2D" uid="uid://bdfk2yvep8cnl" path="res://ex8erdhiq3d81.webp" id="3_kgs05"]
[ext_resource type="Resource" uid="uid://bv2jnbr6rxuly" path="res://weapon resources/blasterN.tres" id="4_ldhnm"]
[ext_resource type="PackedScene" uid="uid://b4lav6bjjcw46" path="res://models/weapons/blasterD.glb" id="4_q1qnf"]
[ext_resource type="PackedScene" uid="uid://ctlbfasa80sr4" path="res://models/weapons/blasterE.glb" id="5_t3eef"]
[ext_resource type="Resource" uid="uid://bvao2lcy2uuxq" path="res://weapon resources/crossbow.tres" id="7_kgoqa"]
[ext_resource type="PackedScene" uid="uid://tngdt31qhhdb" path="res://models/custom weps/hand_crossbow.blend" id="11_hov22"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5yn2q"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qeup4"]

[sub_resource type="Animation" id="Animation_oc7gv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterN:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.75373, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterN:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterN:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3.14159, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("blasterE:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("blasterE:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("blasterE:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.75373, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Bullet_point:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.198839, -0.1559, -0.671156)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("hand_crossbow:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.358748, -0.520866, -0.338129)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("hand_crossbow:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.492933, 0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("hand_crossbow:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_crrja"]
resource_name = "blasterE OOA"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterE:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.198769, -0.25282, -0.726908), Vector3(0.198769, -0.25282, -0.703482)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterE:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0255325, 2.98953, -0.129076), Vector3(0.0662471, 2.98924, -0.143151)]
}

[sub_resource type="Animation" id="Animation_a7ypk"]
resource_name = "blasterE activate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterE:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterE:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0255325, 2.98953, -0.129076)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterE:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.75373, 0), Vector3(0.198769, -0.25282, -0.726908)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bullet_point:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.413225, -0.174886, -1.25088)]
}

[sub_resource type="Animation" id="Animation_rason"]
resource_name = "blasterE deactivate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterE:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.198769, -0.25282, -0.726908), Vector3(0.198769, -0.637897, -0.303955)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterE:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0255325, 2.98953, -0.129076), Vector3(0.645954, 2.95081, -0.248729)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterE:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bullet_point:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.413225, -0.174886, -1.25088)]
}

[sub_resource type="Animation" id="Animation_dp2qu"]
resource_name = "blasterE reload"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterE:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.0255325, 2.98953, -0.129076), Vector3(-0.0261799, 0, -0.129154), Vector3(-0.0261799, -3.31613, -0.129154)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterE:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.198769, -0.25282, -0.726908)]
}

[sub_resource type="Animation" id="Animation_fyad3"]
resource_name = "blasterE shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterE:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.198769, -0.25282, -0.726908), Vector3(0.198769, -0.227816, -0.672028), Vector3(0.198769, -0.202812, -0.660068)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterE:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0255325, 2.98953, -0.129076), Vector3(-0.174533, 2.98975, -0.129154)]
}

[sub_resource type="Animation" id="Animation_aw3hd"]
resource_name = "blasterN Activate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterN:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.554785, 0.554785),
"update": 0,
"values": [Vector3(0, -0.75373, 0), Vector3(0.0515757, -0.230735, -0.517022)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterN:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.101532, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterN:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(0.554785),
"update": 0,
"values": [Vector3(0, 3.14159, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bullet_point:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.198839, -0.1559, -0.671156)]
}

[sub_resource type="Animation" id="Animation_6p2jd"]
resource_name = "blasterN Deactivate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterN:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.517632, 0.517632),
"update": 0,
"values": [Vector3(0.0515757, -0.230735, -0.517022), Vector3(0.0515757, -0.657164, 0.00530332)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterN:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterN:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Bullet_point:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.198839, -0.1559, -0.671156)]
}

[sub_resource type="Animation" id="Animation_34jy4"]
resource_name = "blasterN OOO"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterN:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.0515757, -0.230735, -0.458814), Vector3(0.0515757, -0.230735, -0.458814), Vector3(0.0515757, -0.230735, -0.458814)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterN:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(2.21914, 2.21914, 2.21914),
"update": 0,
"values": [Vector3(-1.33588e-07, 3.14159, 0.0739321), Vector3(-1.66575e-07, 3.14159, -0.174149), Vector3(-1.17045e-07, 3.14159, 0.112713)]
}

[sub_resource type="Animation" id="Animation_xmmtf"]
resource_name = "blasterN Shoot"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterN:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.757859, 0.757859, 1),
"update": 0,
"values": [Vector3(0.0515757, -0.230735, -0.458814), Vector3(0.0515757, -0.230735, -0.458814), Vector3(0.0515757, -0.230735, -0.458814)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterN:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.757859, 0.757859, 1),
"update": 0,
"values": [Vector3(0, -3.14159, 0), Vector3(-0.0759393, -3.14159, -1.14886e-08), Vector3(-0.0759393, -3.14159, -1.14886e-08)]
}

[sub_resource type="Animation" id="Animation_seorh"]
resource_name = "blasterN reload"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterN:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.0759393, -3.14159, -1.14886e-08), Vector3(-6.28319, -3.14159, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterN:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0515757, -0.230735, -0.458814)]
}

[sub_resource type="Animation" id="Animation_fg8qc"]
resource_name = "crossbow activate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand_crossbow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.358748, -0.520866, -0.338129), Vector3(0.314117, -0.281903, -0.331109)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand_crossbow:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.492933, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hand_crossbow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_hw1gs"]
resource_name = "crossbow deactivate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand_crossbow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand_crossbow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.314117, -0.281903, -0.331109), Vector3(0.314117, -0.459581, -0.331109)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hand_crossbow:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.379051, 0, 0), Vector3(-0.379051, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qfjnk"]
resource_name = "crossbow shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand_crossbow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.314117, -0.281903, -0.331109), Vector3(0.314117, -0.281903, -0.307041), Vector3(0.314, -0.282, -0.331)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand_crossbow:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.114354, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wd68a"]
resource_name = "crossbow reload"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand_crossbow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.314, -0.282, -0.331), Vector3(0.314, -0.36448, -0.331), Vector3(0.314, -0.436692, -0.331), Vector3(0.314, -0.282, -0.331)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand_crossbow:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.702321, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1xo52"]
resource_name = "crossbow OOA"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hand_crossbow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.314, -0.282, -0.331), Vector3(0.314, -0.186167, -0.331), Vector3(0.314, -0.282, -0.331)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hand_crossbow:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.374565), Vector3(0, 0, -0.184193), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lqmqn"]
_data = {
"RESET": SubResource("Animation_oc7gv"),
"blasterE OOA": SubResource("Animation_crrja"),
"blasterE activate": SubResource("Animation_a7ypk"),
"blasterE deactivate": SubResource("Animation_rason"),
"blasterE reload": SubResource("Animation_dp2qu"),
"blasterE shoot": SubResource("Animation_fyad3"),
"blasterN Activate": SubResource("Animation_aw3hd"),
"blasterN Deactivate": SubResource("Animation_6p2jd"),
"blasterN OOA": SubResource("Animation_34jy4"),
"blasterN Shoot": SubResource("Animation_xmmtf"),
"blasterN reload": SubResource("Animation_seorh"),
"crossbow OOA": SubResource("Animation_1xo52"),
"crossbow activate": SubResource("Animation_fg8qc"),
"crossbow deactivate": SubResource("Animation_hw1gs"),
"crossbow reload": SubResource("Animation_wd68a"),
"crossbow shoot": SubResource("Animation_qfjnk")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_pwl84")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_csxt6")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Current Weapon:"

[node name="CurrentWeapon" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Ammo:"

[node name="Ammo" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Weapon Stack:"

[node name="WeaponStack" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_kgs05")
stretch_mode = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_5yn2q")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("CapsuleShape3D_qeup4")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49151, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Weapons_manager" type="Node3D" parent="Head/Camera3D"]
script = ExtResource("2_fssy8")
_weapon_resources = Array[Resource("res://weapon_resource.gd")]([ExtResource("3_cimga"), ExtResource("4_ldhnm"), ExtResource("7_kgoqa")])
Start_Weapons = Array[String](["blasterN", "blasterE", "crossbow"])

[node name="FPS_rig" type="Node3D" parent="Head/Camera3D/Weapons_manager"]

[node name="blasterI" parent="Head/Camera3D/Weapons_manager/FPS_rig" instance=ExtResource("2_dxxtd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75373, 0)
visible = false

[node name="blasterN" parent="Head/Camera3D/Weapons_manager/FPS_rig" instance=ExtResource("3_5ytwo")]
transform = Transform3D(-1, 0, 2.53518e-06, 0, 1, 0, -2.53518e-06, 0, -1, 0, -0.75373, 0)
visible = false

[node name="blasterD" parent="Head/Camera3D/Weapons_manager/FPS_rig" instance=ExtResource("4_q1qnf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75373, 0)
visible = false

[node name="blasterE" parent="Head/Camera3D/Weapons_manager/FPS_rig" instance=ExtResource("5_t3eef")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75373, 0)
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/Camera3D/Weapons_manager/FPS_rig"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_lqmqn")
}

[node name="Bullet_point" type="Marker3D" parent="Head/Camera3D/Weapons_manager/FPS_rig"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.198839, -0.1559, -0.671156)

[node name="hand_crossbow" parent="Head/Camera3D/Weapons_manager/FPS_rig" instance=ExtResource("11_hov22")]
transform = Transform3D(0.075, 0, 0, 0, 0.0660711, 0.0354909, 0, -0.0354909, 0.0660711, 0.358748, -0.520866, -0.338129)
visible = false

[connection signal="Update_Ammo" from="Head/Camera3D/Weapons_manager" to="CanvasLayer" method="_on_weapons_manager_update_ammo"]
[connection signal="Update_Weapon_Stack" from="Head/Camera3D/Weapons_manager" to="CanvasLayer" method="_on_weapons_manager_update_weapon_stack"]
[connection signal="Weapon_Changed" from="Head/Camera3D/Weapons_manager" to="CanvasLayer" method="_on_weapons_manager_weapon_changed"]
[connection signal="animation_finished" from="Head/Camera3D/Weapons_manager/FPS_rig/AnimationPlayer" to="Head/Camera3D/Weapons_manager" method="_on_animation_player_animation_finished"]
